docs/refs/script-api/server/1.10.0/entitycomponenttypes.md
# `EntityComponentTypes`

> 文档版本：1.21.50.25

`EntityComponentTypes`枚举。script_api.@minecraft/server.entitycomponenttypes.description

## 常量

/// define
`CanClimb`


///

```js
static read-only CanClimb = "minecraft:can_climb";
```


/// define
`CanFly`


///

```js
static read-only CanFly = "minecraft:can_fly";
```


/// define
`CanPowerJump`


///

```js
static read-only CanPowerJump = "minecraft:can_power_jump";
```


/// define
`Color`


///

```js
static read-only Color = "minecraft:color";
```


/// define
`Equippable`


///

```js
static read-only Equippable = "minecraft:equippable";
```


/// define
`FireImmune`


///

```js
static read-only FireImmune = "minecraft:fire_immune";
```


/// define
`FloatsInLiquid`


///

```js
static read-only FloatsInLiquid = "minecraft:floats_in_liquid";
```


/// define
`FlyingSpeed`


///

```js
static read-only FlyingSpeed = "minecraft:flying_speed";
```


/// define
`FrictionModifier`


///

```js
static read-only FrictionModifier = "minecraft:friction_modifier";
```


/// define
`GroundOffset`


///

```js
static read-only GroundOffset = "minecraft:ground_offset";
```


/// define
`Healable`


///

```js
static read-only Healable = "minecraft:healable";
```


/// define
`Health`


///

```js
static read-only Health = "minecraft:health";
```


/// define
`Inventory`


///

```js
static read-only Inventory = "minecraft:inventory";
```


/// define
`IsBaby`


///

```js
static read-only IsBaby = "minecraft:is_baby";
```


/// define
`IsCharged`


///

```js
static read-only IsCharged = "minecraft:is_charged";
```


/// define
`IsChested`


///

```js
static read-only IsChested = "minecraft:is_chested";
```


/// define
`IsDyeable`


///

```js
static read-only IsDyeable = "minecraft:is_dyeable";
```


/// define
`IsHiddenWhenInvisible`


///

```js
static read-only IsHiddenWhenInvisible = "minecraft:is_hidden_when_invisible";
```


/// define
`IsIgnited`


///

```js
static read-only IsIgnited = "minecraft:is_ignited";
```


/// define
`IsIllagerCaptain`


///

```js
static read-only IsIllagerCaptain = "minecraft:is_illager_captain";
```


/// define
`IsSaddled`


///

```js
static read-only IsSaddled = "minecraft:is_saddled";
```


/// define
`IsShaking`


///

```js
static read-only IsShaking = "minecraft:is_shaking";
```


/// define
`IsSheared`


///

```js
static read-only IsSheared = "minecraft:is_sheared";
```


/// define
`IsStackable`


///

```js
static read-only IsStackable = "minecraft:is_stackable";
```


/// define
`IsStunned`


///

```js
static read-only IsStunned = "minecraft:is_stunned";
```


/// define
`IsTamed`


///

```js
static read-only IsTamed = "minecraft:is_tamed";
```


/// define
`Item`


///

```js
static read-only Item = "minecraft:item";
```


/// define
`MarkVariant`


///

```js
static read-only MarkVariant = "minecraft:mark_variant";
```


/// define
`MovementAmphibious`


///

```js
static read-only MovementAmphibious = "minecraft:movement.amphibious";
```


/// define
`MovementBasic`


///

```js
static read-only MovementBasic = "minecraft:movement.basic";
```


/// define
`MovementFly`


///

```js
static read-only MovementFly = "minecraft:movement.fly";
```


/// define
`MovementGeneric`


///

```js
static read-only MovementGeneric = "minecraft:movement.generic";
```


/// define
`MovementHover`


///

```js
static read-only MovementHover = "minecraft:movement.hover";
```


/// define
`MovementJump`


///

```js
static read-only MovementJump = "minecraft:movement.jump";
```


/// define
`MovementSkip`


///

```js
static read-only MovementSkip = "minecraft:movement.skip";
```


/// define
`OnFire`


///

```js
static read-only OnFire = "minecraft:onfire";
```


/// define
`Projectile`


///

```js
static read-only Projectile = "minecraft:projectile";
```


/// define
`PushThrough`


///

```js
static read-only PushThrough = "minecraft:push_through";
```


/// define
`Scale`


///

```js
static read-only Scale = "minecraft:scale";
```


/// define
`SkinId`


///

```js
static read-only SkinId = "minecraft:skin_id";
```


/// define
`TypeFamily`


///

```js
static read-only TypeFamily = "minecraft:type_family";
```


/// define
`Variant`


///

```js
static read-only Variant = "minecraft:variant";
```


/// define
`WantsJockey`


///

```js
static read-only WantsJockey = "minecraft:wants_jockey";
```

